--- a/HTML5/imagem.html
+++ b/HTML5/imagem.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <img src="img/Categories-applications-education-university-icon.png" alt="University">
+    <img src="img/Cabelo.gif" alt="anime">
 </body>
 </html>
