--- a/HTML-e-CSS/video.html
+++ b/HTML-e-CSS/video.html
@@ -21,7 +21,9 @@
 
     <!--Loop  Esta opção define a repetição automática do vídeo após a conclusão da reprodução. -->
 
-    <!--  Como obter o código usando o programa
+    <!--  
+    
+    Como obter o código usando o programa
 
     Adicione seu arquivo ao programa. Use o botão de vídeo para fazer isso ou simplesmente arraste o arquivo para o programa.
     Clique no botão redondo HTML5 na parte inferior da tela. Selecione a resolução do seu vídeo de saída e clique em Converter. Como resultado, você receberá três arquivos de vídeo e uma página com HTML5 na pasta que será nomeada como seu ficheiro original.
