--- a/HTML-CSS-JS/exemplo-de-js.html
+++ b/HTML-CSS-JS/exemplo-de-js.html
@@ -10,7 +10,7 @@
     <p>X = 10 e Y = 20 Z = X+Y</p>
     <p id="identificador"></p>
     <p>Mudando o valor de X</p>
-    <p id="demo2"></p>
+    <p id="identificador2"></p>
 
     <script> 
     var x = 10; 
