--- a/HTML-CSS-JS/exemplo-de-jquery.html
+++ b/HTML-CSS-JS/exemplo-de-jquery.html
@@ -5,7 +5,7 @@
     <title>Exemplo de jQuery</title>
     <meta content="text/html; charset=iso-8859-1" http-equiv="Content-type" />
     
-    <script src="jquery.js">
+    <script src="../node_modules/jquery/dist/jquery.js">
     </script>
     <script languague="javascript">
         $(document).ready(function(){
