--- a/HTML-CSS-JS/exemplo-de-jquery3.html
+++ b/HTML-CSS-JS/exemplo-de-jquery3.html
@@ -8,6 +8,11 @@
     <title>Exemplo de efeito </title>
     <script src="../node_modules/jquery/dist/jquery.js"></script>
     <script>
+        /*
+        fadeOut – efeito de aumento da propriedade de brilho das caixas DIV, tendo seu tempo de duração regulado de acordo com parâme-tros indicados.
+
+        Os valores dos parâmetros indicam tempo de duração do efeito e porcentagem do efeito de brilho, sendo os valores “3000” e “slow” para ajuste da duração e “0.5” para ajuste do nível de brilho para a cor
+        */
         $(document).ready(function () {
             $("button").click(function () {
                 $("#div1").fadeOut("show");
