--- a/ATV1.html
+++ b/ATV1.html
@@ -34,10 +34,11 @@
 
         function ofuscar(){
             var element = document.getElementById('texto');
+            var element2 = document.getElementById('texto2');
             //const text = element.outerHTML;
             //const texto = text.replace('Oi,', 'Olá!');
             
-            element.innerText = `${element.value.replace('Oi', 'Olá')}`;
+            element2.innerText = `${element.value.replace('Oi', 'Olá')}`;
 
            
         }
