update project and html5

--- a/HTML5/lista.html
+++ b/HTML5/lista.html
@@ -9,13 +9,7 @@
 </head>
 
 <body>
-    <!--Lista desordenada-->
-    <!--Listagem sem símbolo marcador-->
-    <ul style="list-style-type: none">
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-    </ul>
+    <h2>Listas Ordenadas</h2>
 
     <!--Lista ordenada numerada de 1 a n-->
     <ol type="1">
@@ -52,6 +46,7 @@
         <li>Item</li>
     </ol>
 
+    <h2>Listas não Ordenadas</h2>
     <!-- Lista-->
     <dl>
         <dt>* Item</dt>
@@ -60,9 +55,17 @@
         <dd>+ Subitem</dd>
     </dl>
 
+    <!--Lista desordenada-->
+    <!--Listagem sem símbolo marcador-->
+    <ul style="list-style-type: none">
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+    </ul>
+
     <!--Marcador em forma de círculo cheio-->
     <ul style="list-style-type:disc">
-       <li>Item</li>
+        <li>Item</li>
         <li>Item</li>
         <li>Item</li>
     </ul>
@@ -80,6 +83,29 @@
         <li>Item</li>
         <li>Item</li>
     </ul>
+
+    <!--Marcador em forma de circulo-->
+    <ul type="circle">
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+    </ul>
+
+    <!--Marcador em forma de quadrado-->
+    <ul type="square">
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+    </ul>
+
+    <!--Marcador em forma de circulo preenchido-->
+    <ul type="disc">
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+    </ul>
+
+   
 </body>
 
 </html>
