--- a/ATV1.html
+++ b/ATV1.html
@@ -66,7 +66,7 @@
                 //const text = element.outerHTML;
                 //const texto = text.replace('Oi,', 'Olá!');
 
-                element2.innerText = `${element.value.replace(/a/g, 'ais').replace(/e/g, 'enter').replace(/i/g, 'inis').replace(/o/g, 'omber').replace(/u/g, 'ufter')}`;
+                element2.innerText = `${element.value.replace(/e/g, 'enter').replace(/i/g, 'inis').replace(/o/g, 'omber').replace(/u/g, 'ufter').replace(/a/g, 'ais')}`;
 
             }
 
