--- a/HTML5/desafios/d006/d006.html
+++ b/HTML5/desafios/d006/d006.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tags HTML</title>
 </head>
+
 <body>
-    
+    <h1>Tags em HTML</h1>
+    <p>Em HTML5, podemos inserir os elementos da lista a seguir. Passe o mouse sobre os temos para descobrir qual tag
+        deverá utilizar em cada caso.</p>
+    <ul>
+        <li><abbr title="Use a tag <p>">Págrafos</abbr></li>
+        <li><abbr title="Use a tag <h1>">Títulos</abbr></li>
+        <li><abbr title="Use a tag <img>">Imagens</abbr></li>
+        <li><abbr title="Use a tag <abbr>">Abreviações</abbr></li>
+        <li><abbr title="Use a tag <pre> e <code>">Códigos-fonte</abbr></li>
+        <li><abbr title="Use a tag <ol>">Lista numeradas</abbr></li>
+        <li><abbr title="Use a tag <ul>">Lista com demarcadores</abbr></li>
+    </ul>
 </body>
+
 </html>
