modified audio and video

--- a/HTML5/video.html
+++ b/HTML5/video.html
@@ -44,8 +44,8 @@ Se você tem um site no wordpress, basta inserir o URL no lugar certo e o mecani
 Com o advento de novas tags, a inserção de arquivos de mídia na página web tornou-se muito mais simples. Sem dúvida, qualquer desenvolvedor web precisa saber como isso é feito. Além disso, usando a tag video ou classes de estilo, você pode adicionar um quadro ou alguns outros elementos decorativos ao seu conteúdo visual.-->
     <video controls>
         <source src="../HTML5/video/Waves-70796.mp4" type="video/mp4">
-        <source  src="../HTML5/video/Waves-70796.mp4" type="video/mp4">
-        <source  src="../HTML5/video/Waves-70796.mp4" type="video/mp4">
+        <source  src="../HTML5/video/Waves-70796.mp4" type="video/m4v">
+        <source  src="../HTML5/video/Waves-70796.mp4" type="video/webm">
         <object>
           <embed src="Waves-70796.mp4" type="application/x-shockwave-flash" 
           allowfullscreen="false" allowscriptaccess="always">  		
