--- a/CSS/box-shadow.html
+++ b/CSS/box-shadow.html
@@ -36,6 +36,7 @@
 
         nav>a:hover {
             text-decoration: underline;
+            
         }
 
         article {
@@ -51,6 +52,8 @@
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-radius: 10px 40px;/*Raio da borda - border-top-left-radius ->    border-top-right-radius ->    border-bottom-right-radius: ->    border-bottom-left-radius: */
+            box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.384);
         }
 
         footer {
@@ -63,6 +66,13 @@
 
         footer>p {
             margin: 0px;
+        }
+        div#bola {
+            height: 100px;
+            width: 100px;
+            margin: 10px;
+            background-color: white;
+            border-radius: 50%;
         }
     </style>
 </head>
@@ -96,6 +106,7 @@
     <footer>
         <p>Desenvolvido pelo CursoemVideo</p>
     </footer>
+    <div id="bola"></div>
 </body>
 
 </html>
