--- a/CSS/intermediario/background-position/background-position.html
+++ b/CSS/intermediario/background-position/background-position.html
@@ -6,8 +6,22 @@
         <title>Background position</title>
     </head>
     <body>
-    <div class="rect" id="1">
+    <div class="rect-0">
 
+     </div>
+
+    <div class="rect" id="q1">
+
+    </div>
+    <div class="rect" id="q2">
+
+    </div>
+    <div class="rect" id="q3">
+
+    </div>
+    <div class="rect" id="q4">
+
+    </div>
         
     </body>
 </html>
