--- a/CSS/intermediario/background-repeat/background-repeat.html
+++ b/CSS/intermediario/background-repeat/background-repeat.html
@@ -9,6 +9,8 @@
             background-size: 80px 80px;
             background-repeat: no-repeat;
             /* background-repeat: repeat; */
+            /* background-repeat: repeat-y; */
+            /* O ponto de partida é sempre no canto superior esquerdo */
         }
     </style>
     <body>
