--- a/CSS/iniciante/seletor.html
+++ b/CSS/iniciante/seletor.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seletores com CSS</title>
-    <link rel="stylesheet" href="estilos/style-seletor.css">
+    <link rel="stylesheet" href="../estilos/style-seletor.css">
 </head>
 <body>
     <h1 id="principal" class="destaque">Criando Sites com HTML</h1>
