--- a/CSS/intermediario/background-attachment/background-attachment.html
+++ b/CSS/intermediario/background-attachment/background-attachment.html
@@ -3,19 +3,13 @@
     <head>
         <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"/>
-        <title>Background Attachment shorthand</title>
+        <title>Background Attachment</title>
     </head>
     <body>
     <main>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
         </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
-        </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
-        </p>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
         </p>
@@ -28,21 +22,19 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
         </p>
+
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
         </p>
+
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
         </p>
+
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
         </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
-        </p>
+
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper erat at tortor suscipit auctor. Cras egestas hendrerit finibus. Nam in nisi ac ligula lobortis feugiat. Maecenas rhoncus efficitur risus, vel iaculis tellus aliquet sed. Nullam est eros, molestie id tincidunt eu, porttitor eget augue. Pellentesque varius porta enim eu dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed sed imperdiet purus. Quisque at placerat leo.
         </p>
