--- a/CSS/iniciante/fontes-google-fonts.html
+++ b/CSS/iniciante/fontes-google-fonts.html
@@ -7,6 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalhando com fontes do google</title>
     <style>
+
+/* A font family name and a generic family name 
+
+font-family: "Gill Sans Extrabold", sans-serif;
+font-family: "Goudy Bookletter 1911", sans-serif;
+
+/* A generic family name only */
+/*
+font-family: serif;
+font-family: sans-serif;
+font-family: monospace;
+font-family: cursive;
+font-family: fantasy;
+font-family: system-ui;
+font-family: ui-serif;
+font-family: ui-sans-serif;
+font-family: ui-monospace;
+font-family: ui-rounded;
+font-family: emoji;
+font-family: math;
+font-family: fangsong;
+*/
+
+/* Global values */
+/*
+font-family: inherit;
+font-family: initial;
+font-family: revert;
+font-family: revert-layer;
+font-family: unset; 
+*/
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap');
 
         body {
