--- a/CSS/iniciante/fontes.html
+++ b/CSS/iniciante/fontes.html
@@ -16,6 +16,7 @@
         }
 
         h1 {
+            /* shorthand: style -> weight -> size -> nome -> serif  */
             font: italic bolder 3em 'Lucida Sans', sans-serif;
         }
 
