--- a/CSS/intermediario/projeto-cordel/index.html
+++ b/CSS/intermediario/projeto-cordel/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <header>
-        <h1>Projeto Cordel</h1>
+        <h1>Cordel Moderno</h1>
         <h3>Por <b>Milton Duarte</b></h3>
     </header>
     </body>
