--- a/CSS/intermediario/projeto-cordel/index.html
+++ b/CSS/intermediario/projeto-cordel/index.html
@@ -1,98 +1,114 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css"/>
-        <title>Projeto Cordel</title>
-    </head>
-    <body>
+
+<head>
+    <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8; width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
+    <title>Projeto Cordel</title>
+</head>
+
+<body>
     <header>
-        <h1>Cordel Moderno</h1>
-        <h3>Por <b>Milton Duarte</b></h3>
+        <div id="titulo">
+            <h1>Cordel Moderno</h1>
+        </div>
+        <div id="subtitulo">
+            <h3>Por <b> Milton Duarte</b></h3>
+        </div>
     </header>
-    </body>
-    <main>
-    <p>
-        Estou ficando cansado
-Da tal tecnologia
-Só se fala por e-mail
-Mensagem curta e fria
-Twitter e Facebook
-Antes que eu caduque
-Vou dizer tudo em poesia.
-    </p>
-    
-   <p>Não é mais como era antes
-É tudo abreviado
-"Você" só tem duas letras
-O "O" e o "E" foi riscado
-Para declarar o amor
-Basta botar uma flor
-E um coração desenhado.
-</p>
+</body>
+<main>
+    <div id="paragrafo1">
+        <p>
+            Estou ficando cansado
+            Da tal tecnologia
+            Só se fala por e-mail
+            Mensagem curta e fria
+            Twitter e Facebook
+            Antes que eu caduque
+            Vou dizer tudo em poesia.
+        </p>
+    </div>
 
-
-<p>
-    Arroba agora não pesa
-É parte de um endereço
-Ponto final nem se usa
-Ou vai até no começo
-Agora é .com
-Se o saite é muito bom
-Ele vale um alto preço.
-</p>
-
-<p>
-    Pra piorar a liguagem
-O emoticom é um risco
-Tem símbolo para tudo
-Ponto e vírgula e um asterisco
-Um beijo significa
-Pra entender como fica
-Decifre esse rabisco.
-</p>
-
-<p>
-    Tenho saudade das cartas
-Escritas com a própria mão
-Mandava no mês de Junho
-Só chegava no Verão
-Mas matava a saudade
-Era texto de verdade
-Nas linhas do coração.
-</p>
-
-<p>
-    Agora, escrevo e envio
-Chegando na mesma hora
-Mas quando vou prosear
-A pessoa foi embora
-Abriu outro aplicativo
-O mundo ficou cativo
-Da tecnologia do agora.
-</p>
-<p>
-    Felizmente, pra orar
-Não precisa de internet
-Deus escuta todo mundo
-Se quiser, faça esse teste
-Dois pontos são dois joelhos
-Seus lábios são aparelhos
-Deixe que Deus interprete.
-</p>
-
-<p>
-    Felizmente, pra orar
-Não precisa de internet
-Deus escuta todo mundo
-Se quiser, faça esse teste
-Dois pontos são dois joelhos
-Seus lábios são aparelhos
-Deixe que Deus interprete.
-</p>
-
+    <div id="paragrafo2">
+        <p>Não é mais como era antes
+            É tudo abreviado
+            "Você" só tem duas letras
+            O "O" e o "E" foi riscado
+            Para declarar o amor
+            Basta botar uma flor
+            E um coração desenhado.
+        </p>
+    </div>
+    <div id="paragrafo3">
+        <p>
+            Arroba agora não pesa
+            É parte de um endereço
+            Ponto final nem se usa
+            Ou vai até no começo
+            Agora é .com
+            Se o saite é muito bom
+            Ele vale um alto preço.
+        </p>
+    </div>
+    <div id="paragrafo4">
+        <p>
+            Pra piorar a liguagem
+            O emoticom é um risco
+            Tem símbolo para tudo
+            Ponto e vírgula e um asterisco
+            Um beijo significa
+            Pra entender como fica
+            Decifre esse rabisco.
+        </p>
+    </div>
+    <div id="paragrafo5">
+        <p>
+            Tenho saudade das cartas
+            Escritas com a própria mão
+            Mandava no mês de Junho
+            Só chegava no Verão
+            Mas matava a saudade
+            Era texto de verdade
+            Nas linhas do coração.
+        </p>
+    </div>
+    <div id="paragrafo6">
+        <p>
+            Agora, escrevo e envio
+            Chegando na mesma hora
+            Mas quando vou prosear
+            A pessoa foi embora
+            Abriu outro aplicativo
+            O mundo ficou cativo
+            Da tecnologia do agora.
+        </p>
+    </div>
+    <div id="paragrafo7">
+        <p>
+            Felizmente, pra orar
+            Não precisa de internet
+            Deus escuta todo mundo
+            Se quiser, faça esse teste
+            Dois pontos são dois joelhos
+            Seus lábios são aparelhos
+            Deixe que Deus interprete.
+        </p>
+    </div>
+    <div id="paragrafo8">
+        <p>
+            Felizmente, pra orar
+            Não precisa de internet
+            Deus escuta todo mundo
+            Se quiser, faça esse teste
+            Dois pontos são dois joelhos
+            Seus lábios são aparelhos
+            Deixe que Deus interprete.
+        </p>
+    </div>
 </main>
 <footer>
     <p>Site criado por <b>Jonatan Renan</b> para o <b>Curso em video</b></p>
 </footer>
+
 </html>
