pseudoclasses, fontes, seletor

--- a/CSS/iniciante/fontes-externas.html
+++ b/CSS/iniciante/fontes-externas.html
@@ -9,7 +9,7 @@
     <style>
         @font-face {
             font-family: 'Love';
-            src: url('img/fontes/love\ larry\ ttf.ttf') format('truetype');
+            src: url('fontes/love\ larry\ ttf.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
             /*
@@ -25,7 +25,7 @@
 
         @font-face {
             font-family: 'Chigoda';
-            src: url('img/fontes/Chigoda.ttf') format('truetype');
+            src: url('fontes/Chigoda.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
             /*
