--- a/CSS/iniciante/pseudo-classes.html
+++ b/CSS/iniciante/pseudo-classes.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pseudo-classes</title>
     <style>
-        /*: = pseudo-classes, relacionadas ao estado de um determinado elemento*/
+        /*: = pseudo-classes, relacionadas ao estado de um determinado elemento ou uma classe*/
         div{
             display: inline-block;
             background-color: lightgray;
