--- a/CSS/iniciante/seletor.html
+++ b/CSS/iniciante/seletor.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seletores com CSS</title>
-    <link rel="stylesheet" href="../estilos/style-seletor.css">
+    <link rel="stylesheet" href="estilos/style-seletor.css">
 </head>
+
 <body>
+    <!-- Em HTML é ID = em CSS é # 
+        Em HTML é class = em CSS é .
+
+        Dentro de um mesmo documento HTML só se pode ter 1 elemento com ID
+
+        Quando se tem dois ou mais elementos, e se quer aplicar a mesma configuração neles, se usa o CLASS
+
+        Não dê nome de uma class ou id de acordo com a forma, mais sim, de acordo com a sua função
+
+        Posso ter em um mesmo elemento HTML configurações de ID e class, entretanto, o ID sobrepõe as configurações de class
+
+        Existe uma herança entre os elementos html.
+
+    -->
     <h1 id="principal" class="destaque">Criando Sites com HTML</h1>
     <h1>Aprendendo HTML</h1>
+
     <h2 class="basico">HTML básico</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure
+        eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+
     <h2 class="intermediario">HTML intermediário</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure
+        eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+
     <h2 class="avançado">HTML avançado</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure
+        eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+
     <h1 class="destaque avançado">Aprendendo CSS</h1>
+
     <h2 class="basico">CSS básico</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure
+        eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+
     <h2 class="intermediario">CSS intermediário</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure
+        eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+
     <h2 class="avançado destaque">CSS avançado</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vitae magni quasi amet pariatur vero, iure
+        eligendi architecto atque eum incidunt a saepe possimus facere voluptas, deleniti quisquam nulla nam.</p>
 </body>
+
 </html>
