links, pseudoclasses e correcao

--- a/CSS/iniciante/pseudo-classes.html
+++ b/CSS/iniciante/pseudo-classes.html
@@ -9,7 +9,7 @@
     <style>
         /*: = pseudo-classes, relacionadas ao estado de um determinado elemento ou uma classe*/
         div{
-            display: inline-block;
+            display: inline-block; /* Coloca tudo em uma mesma linha */
             background-color: lightgray;
             border: 1px solid black;
             text-align: center;
