--- a/HTML5/videos-externos.html
+++ b/HTML5/videos-externos.html
@@ -11,9 +11,7 @@
 <body>
     <h1>Inserindo vídeos do youtube</h1>
     <p>Este vídeo não consome dados do servidor e sim do youtube</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/eF9Qoc6p_4Q" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+    <iframe width="560" height="315"src="https://www.youtube.com/embed/D0O-Lk_Dnkw?si=Ve3yDRjATg5u61Wo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <!--O codeck do video não é tão bom como o do youtube, dando travadas no vídeo-->
     <h1>Inserindo vídeos do vimeo</h1>
     <iframe src="https://player.vimeo.com/video/191894507?autoplay=1&color=ff9933&portrait=0" width="560" height="315"
