--- a/CSS/avancado/navegacao-iframe/index.html
+++ b/CSS/avancado/navegacao-iframe/index.html
@@ -7,23 +7,22 @@
     <title>Uso de iframes</title>
 
     <style>
-        body{
+        body {
             font-family: Arial, Helvetica, sans-serif;
         }
 
-        iframe#tela{
+        iframe#tela {
             width: 95%;
             height: 400px;
             border: 2px solid black;
         }
-
     </style>
 </head>
 
 <body>
     <!-- Para fazer com que o conteúdo da página abra na mesma página dentro de um iframe, usamos os atributos name e target -->
-   
-   <!-- Sobre o parâmetro "name", de certa maneira ele serve para identificar um elemento, assim como o parâmetro "id" faz...
+
+    <!-- Sobre o parâmetro "name", de certa maneira ele serve para identificar um elemento, assim como o parâmetro "id" faz...
 
     De forma geral, pode-se dizer que o id é importante para o browser (front-end), para a manipulação do DOM (arvore do documento) e CSS; e o name é importante para o servidor (back-end)
 
@@ -46,14 +45,19 @@
         ipsum dolor sit amet consectetur adipisicing elit. Quis, corrupti adipisci. Voluptates officia provident
         corporis unde saepe, nostrum maxime quod numquam explicabo architecto tempora. Accusantium praesentium rerum
         consequatur ratione expedita?</p>
-
-    <iframe id="tela" name="frame" src="">
+    <!-- srcdoc= conseguimos colocar um html estático (O recomendável é colocar em uma página separada) -->
+    <iframe id="tela" name="frame"
+        srcdoc="<h1>Escolha uma das opções acima </h1> <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti, quia placeat harum voluptatibus autem excepturi odit nesciunt sed, voluptate eius, optio delectus sapiente maiores dolorum! Sint ipsam alias natus eius.</p><img src='img/8683385.png'>">
         <p>
             Infelizmente seu navegador não é compatível com isso
         </p>
     </iframe>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis ab minus reiciendis, repellendus facilis recusandae iure alias exercitationem nemo fugiat quisquam praesentium laboriosam ea suscipit neque laudantium temporibus nisi aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis ipsum neque temporibus impedit enim illo culpa ab similique, sed fugiat reprehenderit cumque rerum ut nisi voluptas accusamus quod, beatae accusantium!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis ab minus reiciendis, repellendus facilis
+        recusandae iure alias exercitationem nemo fugiat quisquam praesentium laboriosam ea suscipit neque laudantium
+        temporibus nisi aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis ipsum neque temporibus
+        impedit enim illo culpa ab similique, sed fugiat reprehenderit cumque rerum ut nisi voluptas accusamus quod,
+        beatae accusantium!</p>
 </body>
 
 </html>
