Incovinientes do Iframe

--- a/CSS/avancado/iframe/index.html
+++ b/CSS/avancado/iframe/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+<!-- Os iframes são importantes e até essenciais em alguns casos, porém eles também possuem alguns inconvenientes e podem trazer alguns problemas para o seu site. É importante que você saiba quais são esses inconvenientes e a partir daí use os iframes somente se realmente tiver convicção, a certeza de que eles são necessários ou de que o recurso vale a pena. -->
+
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a> para aprender a programar</p>
     <p>Acessando o site do 
@@ -17,6 +19,13 @@
         <!-- Existem alguns sites que existem proteção que não permite que seu conteúdo seja visualizado por iframes por parte de terceiros, como por exemplo o google-->
         <!-- O Iframe possui alguns problemas de segurança que podem ser resolvidos com o HTML5 -->
         <!-- Nem todo os navegadores de dispositivos móveis tem suporte para o iframe -->
+        <!-- Não confunda iframe com frame -->
+        <!-- Existem alguns problemas para que o google bot entre nos iframes criados e consiga indexar o conteúdo do iframe, nunca monte um site altamente indexado -->
+        <!-- O Iframe possui problemas de acessibilidade, usabilidade, responsividade, SEO e segurança -->
+        <!-- O Iframe abre portas do seu site para outro site, gerando problemas de segurança (Ataques cross-site; xss) 
+        Nas ocasiões em que usamos iframes, utilizamos com as configurações de proteção ativadas, dando uma proteção um pouco maior do seu site em relação a outros iframes.
+
+        -->
         <p>
             O site do <iframe src="https://www.google.com.br" frameborder="0">Google</iframe> também é muito legal
         </p>
