--- a/CSS/avancado/formularios/form_date.html
+++ b/CSS/avancado/formularios/form_date.html
@@ -9,6 +9,7 @@
 
 <body>
     <!-- Nem todos os atributos funcionam em todos os controles -->
+    <!-- O Navegador Safari da Apple ignora completamente no Desktop o mouth, date e time -->
     <!-- Min -> Mínimo de uma caixa númerica -->
     <!-- Max -> Máximo de uma caixa númerica -->
     <!-- Value -> Preenche com um valor estabelecido, substitui o placeholder -->
