--- a/CSS/avancado/media_queries/index.html
+++ b/CSS/avancado/media_queries/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <!-- Media Query =  Media Type + Media Features -->
+
     <!-- Media querie é muito importante porque temos diversos dispositivos atualmente com telas diferentes -->
 
     <!-- Media querie ajuda a gerar uma página responsiva de melhor eficácia e qualidade -->
 
     <!-- Media querie gera uma versão exclusiva para telas e outra para impressoras. Media querie é muito útil quando for imprimir uma página web de nóticia/blog pois gera uma versão exclusiva pra papel, retirando coisas desnecesárias -->
 </body>
+
 </html>
