--- a/CSS/avancado/media_queries/mediatype/mediatypes.html
+++ b/CSS/avancado/media_queries/mediatype/mediatypes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Query</title>
+    <title>Media Type</title>
     <!-- Chamadas de Media Query ou Media Types-->
     <link rel="stylesheet" href="estilos/tela.css" media="screen">
     <link rel="stylesheet" href="estilos/impressora.css" media="print">
