Reunindo tudo em um único CSS

--- a/CSS/avancado/media_queries/index.html
+++ b/CSS/avancado/media_queries/index.html
@@ -15,6 +15,8 @@
     <!-- Media querie ajuda a gerar uma página responsiva de melhor eficácia e qualidade -->
 
     <!-- Media querie gera uma versão exclusiva para telas e outra para impressoras. Media querie é muito útil quando for imprimir uma página web de nóticia/blog pois gera uma versão exclusiva pra papel, retirando coisas desnecesárias -->
+
+    <!-- Dependendo do projeto, você pode reunir todo o css em um unico arquivo separando por regras de media query -->
 </body>
 
 </html>
