--- a/CSS/avancado/mobile-first/index.html
+++ b/CSS/avancado/mobile-first/index.html
@@ -22,6 +22,7 @@
 
 <!-- Imagens acima de 4MB pesa muito o site e diminui a fluidez -->
 
+<!--     Quando criamos as Media Queries precisamos definir o tamanho de cada tela para cada dispositivo  -->
 <body>
     <main>
         <h1>Testando Media Queries</h1>
