--- a/CSS/avancado/menu_responsivo/index.html
+++ b/CSS/avancado/menu_responsivo/index.html
@@ -1,32 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site</title>
     <link rel="stylesheet" href="style.css" media="all">
+    <link rel="stylesheet" href="mediaquery.css" media="">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+
 <body>
+    <!-- Utilize o google icons para pegar ícones -->
+    <!-- tag <i> = ícone -->
     <header>
         <h1>Meu Site</h1>
+        <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+        </i>
+        <menu id="itens">
+            <ul>
+                <li><a href="">Opção 1</a></li>
+                <li><a href="">Opção 2</a></li>
+                <li><a href="">Opção 3</a></li>
+                <li><a href="">Opção 4</a></li>
+                <li><a href="">Opção 5</a></li>
+            </ul>
     </header>
-    <menu>
-        <ul>
-            <li><a href="">Opção 1</a></li>
-            <li><a href="">Opção 2</a></li>
-            <li><a href="">Opção 3</a></li>
-            <li><a href="">Opção 4</a></li>
-            <li><a href="">Opção 5</a></li>
-        </ul>
     </menu>
     <main>
-        <h1>Testando Media Queries</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente laboriosam nulla illum neque odio rem corporis repellendus, autem maxime itaque quam at architecto excepturi ratione non accusamus accusantium iure ullam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque reiciendis distinctio adipisci. Temporibus blanditiis consequuntur eos libero illo in voluptatem facilis autem asperiores similique, dignissimos voluptatibus nihil? Ullam, eius nam?</p>
+        <article>
+            <h2>Testando Media Queries</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente laboriosam nulla illum neque odio rem
+                corporis repellendus, autem maxime itaque quam at architecto excepturi ratione non accusamus accusantium
+                iure ullam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque reiciendis distinctio
+                adipisci.
+                Temporibus blanditiis consequuntur eos libero illo in voluptatem facilis autem asperiores similique,
+                dignissimos voluptatibus nihil? Ullam, eius nam?</p>
 
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente laboriosam nulla illum neque odio rem corporis repellendus, autem maxime itaque quam at architecto excepturi ratione non accusamus accusantium iure ullam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque reiciendis distinctio adipisci. Temporibus blanditiis consequuntur eos libero illo in voluptatem facilis autem asperiores similique, dignissimos voluptatibus nihil? Ullam, eius nam?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente laboriosam nulla illum neque odio rem
+                corporis repellendus, autem maxime itaque quam at architecto excepturi ratione non accusamus accusantium
+                iure ullam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque reiciendis distinctio
+                adipisci.
+                Temporibus blanditiis consequuntur eos libero illo in voluptatem facilis autem asperiores similique,
+                dignissimos voluptatibus nihil? Ullam, eius nam?</p>
 
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente laboriosam nulla illum neque odio rem corporis repellendus, autem maxime itaque quam at architecto excepturi ratione non accusamus accusantium iure ullam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque reiciendis distinctio adipisci. Temporibus blanditiis consequuntur eos libero illo in voluptatem facilis autem asperiores similique, dignissimos voluptatibus nihil? Ullam, eius nam?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente laboriosam nulla illum neque odio rem
+                corporis repellendus, autem maxime itaque quam at architecto excepturi ratione non accusamus accusantium
+                iure ullam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque reiciendis distinctio
+                adipisci.
+                Temporibus blanditiis consequuntur eos libero illo in voluptatem facilis autem asperiores similique,
+                dignissimos voluptatibus nihil? Ullam, eius nam?</p>
+        </article>
 
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+
+            }
+        }
+    </script>
 </body>
+
 </html>
