--- a/CSS/avancado/menu_responsivo/index.html
+++ b/CSS/avancado/menu_responsivo/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+<!-- onresize = Quando mudar o tamanho do site -->
 
-<body>
+<body onresize="mudouTamanho()">
     <!-- Utilize o google icons para pegar ícones -->
     <!-- tag <i> = ícone -->
     <header>
@@ -56,6 +57,15 @@
 
     </main>
     <script>
+        /* window.innerWidth = Largura da tela */
+        function mudouTamanho() {
+            if (window.innerWidth >= 768){
+                itens.style.display = 'block'
+            }else{
+                itens.style.display = 'none'
+            }
+        }
+
         function clickMenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
@@ -64,6 +74,7 @@
 
             }
         }
+
     </script>
 </body>
 
